feat(elements/grid-list): amend grid-list component adaptation

--- a/src/app/main/elements/basic-ui/grid-list/grid-list.component.html
+++ b/src/app/main/elements/basic-ui/grid-list/grid-list.component.html
@@ -19,7 +19,7 @@
 
     <h3 class="pl-32">Rowspan & Colspan Grid List</h3>
     <div class="content">
-        <mat-grid-list cols="4" rowHeight="600px">
+        <mat-grid-list cols="4">
             <mat-grid-tile [rowspan]="2">
                 <img src="https://i.pinimg.com/564x/b8/43/42/b8434218b90dbc45b7c0d8156a4131e6.jpg">
             </mat-grid-tile>
