--- a/src/app/main/elements/basic-ui/icons/icons.component.html
+++ b/src/app/main/elements/basic-ui/icons/icons.component.html
@@ -14,15 +14,15 @@
 
     <div class="content-card center mb-24" fxLayout="column nowrap">
         <h2>Base Icons</h2>
-        <div class="secondary-text">use Material Icons. view on <a href="https://material.io/tools/icons" target="_blank">https://material.io/tools/icons</a>
-            .</div>
+        <div class="secondary-text">use Material Icons. view on <a href="https://material.io/tools/icons" target="_blank">https://material.io/tools/icons</a>.</div>
         <mat-form-field class="w-100-p">
             <input matInput placeholder="Search an icon..." (input)="filterBaseIcons($event)">
         </mat-form-field>
         <ng-container *ngFor="let category of filteredBaseIcons; let last = last;">
             <div class="h3 mt-16">{{category.name}}</div>
             <div fxLayout="row wrap">
-                <div class="icon-holder m-16" fxLayout="column" fxLayoutAlign="center center" *ngFor="let icon of category.icons">
+                <div class="icon-holder m-16" fxLayout="column" fxLayoutAlign="center center"
+                    *ngFor="let icon of category.icons">
                     <mat-icon class="secondary-text s-48">{{icon.id}}</mat-icon>
                     <div class="icon-name secondary-text mt-8">{{icon.id}}</div>
                 </div>
@@ -39,7 +39,8 @@
             <input matInput placeholder="Search an icon..." (input)="filterSvgIcons($event)">
         </mat-form-field>
         <div fxLayout="row wrap">
-            <div class="icon-holder m-16" fxLayout="column" fxLayoutAlign="center center" *ngFor="let icon of filteredMdiIcons">
+            <div class="icon-holder m-16" fxLayout="column" fxLayoutAlign="center center" 
+                *ngFor="let icon of filteredMdiIcons">
                 <mat-icon size="2" svgIcon="mdi:{{icon.name}}" class="secondary-text s-48"></mat-icon>
                 <div class="icon-name secondary-text mt-8">{{icon.name}}</div>
             </div>
