--- a/src/app/main/general/dashboards/analysis/analysis.component.html
+++ b/src/app/main/general/dashboards/analysis/analysis.component.html
@@ -1,8 +1,10 @@
 <div class="page-layout blank dashboard-analysis">
-    <section fxLayout="row nowrap" fxLayoutAlign="space-between center" fxLayoutGap="30px">
-        <mat-card fxFlex="1 0 0%" *ngFor="let widget of widgets">
+    <section fxLayout="row wrap" fxLayout.gt-sm="row nowrap" fxLayoutAlign="space-between stretch" fxLayoutGap.md="15px" fxLayoutGap.lg="30px">
+        <mat-card fxFlex="1 0 0%" fxFlex.xs="100" fxFlex.sm="48"
+            *ngFor="let widget of widgets; let index = index;" 
+            [ngClass.sm]="{'mb-20': index<2}" [ngClass.xs]="{'mb-20': index!==3}">
             <mat-card-header>
-                <mat-card-title fxLayout="row nowrap" fxLayoutAlign="space-between center">
+                <mat-card-title fxLayout="row wrap" fxLayoutAlign="space-between center">
                     <span class="grey-800">
                         <mat-icon>{{widget.titleIcon}}</mat-icon>
                         <span>{{widget.title}}</span>
@@ -19,8 +21,8 @@
             </mat-card-content>
         </mat-card>
     </section>
-    <section fxLayout="row nowrap" fxLayoutAlign="space-between center" fxLayoutGap="30px">
-        <div fxFlex="1 0 0%">
+    <section fxLayout="row nowrap" fxLayoutAlign="space-between center" fxLayoutGap.gt-sm="30px">
+        <div fxFlex="1 0 0%" fxFlex.lt-md="100">
             <ngx-amap class="map"></ngx-amap>
         </div>
         <div fxFlex="1 0 0%"></div>
