feat(layout/toolbar): add two jump links of toolbar

--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -104,7 +104,7 @@
 
     <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
 
-        <button mat-menu-item>
+        <button mat-menu-item routerLink="/general/pages/profile">
             <mat-icon>account_circle</mat-icon>
             <span>个人信息</span>
         </button>
@@ -116,7 +116,7 @@
 
         <mat-divider></mat-divider>
 
-        <button mat-menu-item>
+        <button mat-menu-item routerLink="/general/pages/login">
             <mat-icon>exit_to_app</mat-icon>
             <span>退出</span>
         </button>
