fix(@notadd/components): change background-color style for material-color-picker component

--- a/src/@notadd/components/material-color-picker/material-color-picker.component.scss
+++ b/src/@notadd/components/material-color-picker/material-color-picker.component.scss
@@ -7,7 +7,7 @@
         .views {
             display: flex;
             flex-direction: column;
-            background-color: #3C4252;
+            background-color: #404040;
 
             .view {
                 overflow: hidden;
