--- a/src/@notadd/scss/partials/_icons.scss
+++ b/src/@notadd/scss/partials/_icons.scss
@@ -1,4 +1,8 @@
 @import url("https://fonts.loli.net/icon?family=Material+Icons");
+// Notadd logo
+@import "../icons/notadd-icons";
+// weather icons
+@import "../icons/weather-icons";
 
 i,
 mat-icon {
