feat(dashboards/analysis): add weather report card in analysis component

--- a/src/app/main/general/dashboards/analysis/analysis.component.html
+++ b/src/app/main/general/dashboards/analysis/analysis.component.html
@@ -21,6 +21,44 @@
             </mat-card-content>
         </mat-card>
     </section>
+    <section fxLayout="row wrap" fxLayout.gt-sm="row nowrap" fxLayoutAlign="space-between stretch" fxLayoutGap.md="15px" fxLayoutGap.gt-md="30px">
+        <mat-card class="card card-shadow weather-card p-24" fxFlex="49" fxFlex.lt-md="100" [ngClass.lt-md]="{'mb-32': true}">
+            <mat-card-header>
+                <mat-card-title class="m-0">Weather Report</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <div fxLayout="row nowrap" fxLayoutAlign="space-between center">
+                    <div class="realtime mt-20 mb-16 light-blue-text">
+                        <mat-icon class="wi s-64" fontSet="weathericon" fontIcon="wi-day-showers"></mat-icon>
+                        <span class="realtime-temp font-size-50"> {{weatherReport.today?.temperature || 0}}<sup>°</sup></span>
+                    </div>
+                    <div>
+                        <h4 class="day font-size-30 m-0">{{weatherReport.xingqi}}</h4>
+                        <small class="city secondary-text">陕西, 西安</small>
+                    </div>
+                </div>
+                <mat-list dense>
+                    <mat-list-item>
+                        <span matLine>PM2.5</span>
+                        <span>{{weatherReport.today?.pm25}}</span>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <span matLine>Wind</span>
+                        <span>{{weatherReport.today?.wind?.direction}}° {{weatherReport.today?.wind?.speed}} km/h</span>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <span matLine>Humidity</span>
+                        <span>{{weatherReport.today?.humidity}}</span>
+                    </mat-list-item>
+                    
+                </mat-list>
+            </mat-card-content>
+        </mat-card>
+        <div fxFlex="1 0 0%" fxFlex.lt-md="100" fxLayout="column nowrap">
+            <div class="card card-shadow mb-20" [ngClass.lt-md]="{'mb-32': true}">2222</div>
+            <div class="card card-shadow">3333</div>
+        </div>
+    </section>
     <section fxLayout="row nowrap" fxLayout.lt-md="row wrap" fxLayoutAlign="space-between start" fxLayoutGap.gt-sm="30px">
         <div class="card card-shadow" fxFlex="59" fxFlex.lt-md="100" [ngClass.lt-md]="{'mb-32': true}">
             <div class="scatter-map" echarts [options]="scatterMapOption"></div>
